--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Github</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A mollitia quas architecto facere illo voluptatum, omnis velit unde neque blanditiis quae fugiat optio saepe debitis perspiciatis non impedit ex exercitationem!</p>
 </body>
 </html>
